--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,6 @@
 ---
 include:
   - board: nice_nano_v2
-    shield: cygnus_left
+    shield: cipther_left
   - board: nice_nano_v2
-    shield: cygnus_right
+    shield: cipther_right
