--- a/config/cipther.conf
+++ b/config/cipther.conf
@@ -9,11 +9,11 @@
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
 
-# Enable deep sleep support
-CONFIG_ZMK_SLEEP=y
+# # Enable deep sleep support
+# CONFIG_ZMK_SLEEP=y
 
-# Set deep sleep to 30 minutes
-CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
+# # Set deep sleep to 30 minutes
+# CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=1800000
 
-# Enable logging
-CONFIG_ZMK_USB_LOGGING=y
+# # Enable logging
+# CONFIG_ZMK_USB_LOGGING=y
