--- a/config/cipther.conf
+++ b/config/cipther.conf
@@ -17,3 +17,10 @@
 
 # # Enable logging
 # CONFIG_ZMK_USB_LOGGING=y
+
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=70
+CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
+CONFIG_RGBLED_WIDGET_CONN_COLOR_ADVERTISING=7
+CONFIG_RGBLED_WIDGET_CONN_COLOR_DISCONNECTED=5
+
+CONFIG_RGBLED_WIDGET=y
